# ncats/translator/ontology/server/openapi_server/controllers/public_controller.py
@@ -1,17 +1,10 @@
-from logging import debug
-
 import connexion
 import six
 
-from ncats.translator.ontology.server.openapi_server.model.computation_identifier import ComputationIdentifier  # noqa: E501
-from ncats.translator.ontology.server.openapi_server.model.computation_input import ComputationInput  # noqa: E501
-from ncats.translator.ontology.server.openapi_server.model.results import Results  # noqa: E501
-from ncats.translator.ontology.server.openapi_server import util
-
-from .controller_impl import (
-    handle_compute_jaccard,
-    handle_get_jaccard_results,
-)
+from openapi_server.model.computation_identifier import ComputationIdentifier  # noqa: E501
+from openapi_server.model.computation_input import ComputationInput  # noqa: E501
+from openapi_server.model.results import Results  # noqa: E501
+from openapi_server import util
 
 
 def compute_jaccard(computation_input=None):  # noqa: E501
@@ -26,9 +19,7 @@ def compute_jaccard(computation_input=None):  # noqa: E501
     """
     if connexion.request.is_json:
         computation_input = ComputationInput.from_dict(connexion.request.get_json())  # noqa: E501
-        debug("compute_jaccard(computation_input:"+computation_input+")")
-
-    return handle_compute_jaccard(computation_input)
+    return 'do some magic!'
 
 
 def get_results(computation_id):  # noqa: E501
@@ -41,4 +32,4 @@ def get_results(computation_id):  # noqa: E501
 
     :rtype: Results
     """
-    return handle_get_jaccard_results(computation_id)
+    return 'do some magic!'
