# ncats/translator/ontology/server/openapi_server/model/__init__.py
@@ -3,9 +3,8 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.model.computation_id import ComputationId
-from openapi_server.model.computation_identifier import ComputationIdentifier
-from openapi_server.model.computation_input import ComputationInput
-from openapi_server.model.gene_entry import GeneEntry
-from openapi_server.model.results import Results
-from openapi_server.model.similarity import Similarity
+from ncats.translator.ontology.server.openapi_server.model.computation_identifier import ComputationIdentifier
+from ncats.translator.ontology.server.openapi_server.model.computation_input import ComputationInput
+from ncats.translator.ontology.server.openapi_server.model.gene_entry import GeneEntry
+from ncats.translator.ontology.server.openapi_server.model.results import Results
+from ncats.translator.ontology.server.openapi_server.model.similarity import Similarity
